--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
 <!DOCTYPE html><html dir="ltr" lang="pt"><head><link rel="shortcut icon" href="%5D.APP_THEME%20%3D%3D%3D%20%27em%27_"><link rel="preconnect" href="https://fonts.gstatic.com"><link rel="preconnect" href="https://connect.facebook.net"><script>
                   </script>
+                  <!-- Facebook Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '2846526765588379');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=2846526765588379&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
                   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:wght@400;700&display=swap" as="style">
                   <link href="css/css2.css" rel="stylesheet" media="print" onload="this.media='all'">
                   <script>
